fixed issue with aligning netflix and disney logos in center of page - removed css margin, added css display flex on parent

--- a/imbd-disney-a.css
+++ b/imbd-disney-a.css
@@ -24,9 +24,11 @@ body {
     margin-bottom: 10px;
     }
 
-.disney img {
-    margin-left: 750px;
-}
+    .disney {
+        display: flex;
+        justify-content: center;
+    }
+
 
 #nav-home {
     /* float: right; */
